--- a/src/styles/SidebarMenuItem.css
+++ b/src/styles/SidebarMenuItem.css
@@ -1,3 +1,21 @@
 .sidebarmenu-item {
-    
+    background-color: rgb(228, 255, 255);
+    padding: 10px;
+    border-bottom: 1px solid gray;
+    box-sizing: content-box;
+}
+
+.menuitem-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    text-decoration-line: none;
+    color: black;
+    font-weight: bold;
+}
+
+.sidebarmenu-item:hover {
+    background-color: antiquewhite;
 }
